--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,12 +12,16 @@ jobs:
         node-version: 12
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
+    - name: Create Database
+      run: mysql --user="root" --password="root" -e "CREATE DATABASE cypress character set UTF8mb4 collate utf8mb4_bin;"
     - name: Install Composer Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
     - name: Install Node Dependencies
       run: npm install
     - name: Generate key
       run: php artisan key:generate
+    - name: Build assets
+      run: npm run production
     - name: Run Laravel Server
       run: php artisan serve > /dev/null 2>&1 &
     - name: Execute tests
