--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laravel/dusk": "^5.6",
         "laravel/ui": "^1.1",
         "mockery/mockery": "^1.0",
+        "noeldemartin/laravel-cypress": "^0.0.2",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
