--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Run Laravel Server
       run: php artisan serve > /dev/null 2>&1 &
     - name: Execute tests
-      run: npm run cy:run
+      uses: cypress-io/github-action@v1
