--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,7 +3,8 @@ name: Testing
 on: [push]
 
 jobs:
-  run-tests:
+  run-backend-tests:
+    name: Backend tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -18,13 +19,39 @@ jobs:
           mysql --user="root" --password="root" -e "CREATE DATABASE cypress character set UTF8mb4 collate utf8mb4_bin;"
     - name: Install Composer Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-    - name: Install Node Dependencies
-      run: npm ci
     - name: Generate key
       run: php artisan key:generate
-    - name: Build assets
-      run: npm run production
     - name: Run Laravel Server
       run: php artisan serve > /dev/null 2>&1 &
+    - name: Install Node Dependencies
+      run: npm ci
+    - name: Build assets
+      run: npm run production
     - name: Execute tests
       run: npm run cy:run
+  run-frontend-tests:
+    name: Frontend tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
+    - name: Copy .env
+      run: cp .env.testing .env
+    - name: Create Database
+      run: |
+          sudo systemctl start mysql
+          mysql --user="root" --password="root" -e "CREATE DATABASE cypress character set UTF8mb4 collate utf8mb4_bin;"
+    - name: Install Composer Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Run Laravel Server
+      run: php artisan serve > /dev/null 2>&1 &
+    - name: Copy Frontend .env
+      run: cp frontend/.env.testing frontend/.env
+    - name: Install Node Dependencies
+      run: cd frontend && npm ci
+    - name: Execute tests
+      run: cd frontend && npm run cy:test
