--- a/.styleci.yml
+++ b/.styleci.yml
@@ -4,7 +4,7 @@ php:
     - alpha_ordered_imports
   disabled:
     - length_ordered_imports
-    - unused_use
+    - no_unused_imports
   finder:
     not-name:
       - index.php
