--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "cypress": "^3.6.1",
-        "cypress-laravel": "^0.2.1",
+        "cypress": "^13.15.2",
+        "cypress-laravel": "0.2.1-next.2f81331177b4829956a54535ac43d84b8bb1f896",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
