--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "cy:open": "cypress open",
+    "cy:open": "cypress open --e2e --browser chromium",
     "cy:run": "cypress run",
     "cy:test": "start-server-and-test dev http://localhost:3000 cy:run"
   },
