--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -75,5 +75,5 @@ jobs:
       uses: actions/upload-artifact@v4
       if: ${{ failure() }}
       with:
-          name: cypress_screenshots
+          name: frontend_cypress_screenshots
           path: frontend/cypress/screenshots
